// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> error renders 1`] = `
<div
  class="field field--touched field--populated field--check field--checkbox"
>
  <input
    aria-describedby="form-0_mock--error"
    aria-labelledby="form-0_mock--label"
    class="field__input field__input--touched field__input--populated field__input--check field__input--checkbox"
    id="form-0_mock"
    type="checkbox"
  />
  <label
    class="field__label field__label--touched field__label--populated field__label--check field__label--checkbox"
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
  </label>
  <span
    class="field__error field__error--touched field__error--populated field__error--check field__error--checkbox"
    id="form-0_mock--error"
    role="alert"
  >
    Error
  </span>
</div>
`;

exports[`<Checkbox /> help renders 1`] = `
<div
  class="field field--populated field--check field--checkbox"
>
  <input
    aria-labelledby="form-0_mock--label"
    class="field__input field__input--populated field__input--check field__input--checkbox"
    id="form-0_mock"
    type="checkbox"
  />
  <label
    class="field__label field__label--populated field__label--check field__label--checkbox"
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
    <span
      class="field__help field__help--populated field__help--check field__help--checkbox"
    >
      Help
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> label renders 1`] = `
<div
  class="field field--populated field--check field--checkbox"
>
  <input
    aria-labelledby="form-0_mock--label"
    class="field__input field__input--populated field__input--check field__input--checkbox"
    id="form-0_mock"
    type="checkbox"
  />
  <label
    class="field__label field__label--populated field__label--check field__label--checkbox"
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Label
  </label>
</div>
`;

exports[`<Checkbox /> renders 1`] = `
<div
  class="field field--populated field--check field--checkbox"
>
  <input
    aria-labelledby="form-0_mock--label"
    class="field__input field__input--populated field__input--check field__input--checkbox"
    id="form-0_mock"
    type="checkbox"
  />
  <label
    class="field__label field__label--populated field__label--check field__label--checkbox"
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
  </label>
</div>
`;
